# ProyectoBackendSENA

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: pep8_check.yml
api_pricut/: api_schema.yml
api_pricut/apps/: exceptions.py  permissions.py  utils.py
api_pricut/apps/authentication/: admin.py  backends.py  jwt.py  models.py
api_pricut/apps/authentication/domain/: constants.py  entities.py  interfaces.py
api_pricut/apps/authentication/infrastructure/: __init__.py  repositories.py  urls.py
api_pricut/apps/authentication/migrations/: 0001_initial.py  0002_alter_jwt_table_alter_jwtblacklist_table.py
api_pricut/apps/dashboard/: admin.py  models.py
api_pricut/apps/dashboard/domain/: constants.py  entities.py  interfaces.py
api_pricut/apps/dashboard/fixtures/: category_materials.json  cutting_techniques.json  materials.json
api_pricut/apps/dashboard/infrastructure/: __init__.py  repositories.py  urls.py
api_pricut/apps/dashboard/migrations/: 0001_initial.py  0002_rename_categorymaterial_materialcategory_and_more.py
api_pricut/apps/dashboard/swagger/: __init__.py
api_pricut/apps/quoter/: apps.py  dxf.py  exceptions.py  typing.py
api_pricut/apps/quoter/scripts/: test_dxf.py  test_graph.py
api_pricut/apps/users/: admin.py  models.py
api_pricut/apps/users/domain/: constants.py  (+2 more)
api_pricut/settings/: urls.py
api_pricut/settings/environments/: base.py  development.py  production.py
api_pricut/tests/: conftest.py  utils.py
api_pricut/tests/factories/: __init__.py  jwt_factory.py  user_factory.py
(+98 files in other folders)
